@startuml llm_agent_uml_class
!include ../common/book-clean.puml

' External dependencies
package "external_dependencies" <<Folder>> {
    class "asyncio.Future" as Future
    class "pydantic.BaseModel" as BaseModel
}


package "llm_agents_from_scratch.data_structures.agent" <<Folder>> {

  class Task {
    +id_: str
    +instruction: str
  }

  class TaskStep {
    +id_: str
    +task_id: str
    +instruction: str
  }

  class TaskStepResult {
    +task_step_id: str
    +content: str
  }

  class TaskResult {
    +task_id: str
    +content: str
  }
}

package "llm_agents_from_scratch.agent" <<Folder>> {
  class LLMAgent {
    +llm: LLM
    +tool_registry: dict[str, Tool]
    +templates: LLMAgentTemplates
    --
    +<<property>> tools(): list[Tool]
    +add_tool(tool: Tool)
    +run(task: Task): LLMAgent.TaskHandler
  }

  class "LLMAgent.TaskHandler" as TaskHandler {
    +llm_agent: LLMAgent
    +task: Task
    +templates: TaskHandlerTemplates
    +rollout: str
    +step_counter: int
    -_background_task: ~asyncio.Task
    --
    -_rollout_contribution_from_single_run_step()
    +get_next_step(): TaskStep | TaskResult
    +run_step(step: TaskStep): TaskStepResult
  }

  LLMAgent +-- TaskHandler : <<nested>>
}
llm_agents_from_scratch.data_structures.agent -[hidden]down- llm_agents_from_scratch.agent
llm_agents_from_scratch -[hidden]up- external_dependencies

BaseModel <|.. Task
BaseModel <|.. TaskStep
BaseModel <|.. TaskStepResult
BaseModel <|.. TaskResult
Future <|.. TaskHandler

@enduml
